force-app/main/default/objects/Partner_Meetings__c/Partner_Meetings__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner meetings detail</description>
    <label>Partner Meetings</label>
    <nameField>
        <displayFormat>PBM-{0000}</displayFormat>
        <label>Meeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>