force-app/main/default/objects/Partner_Meetings__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <inlineHelpText>Enter the date the meeting was held.</inlineHelpText>
    <label>Meeting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>