force-app/main/default/objects/Partner_Meetings__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <inlineHelpText>Select either Business Review (PBM driven), or Marketing Planned (Field Marketing driven).</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Marketing Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>