force-app/main/default/objects/Partner_Meetings__c/fields/PartnerAttribute__c.field-meta.xml
<CustomField>
    <fullName>PartnerAttribute__c</fullName>
    <inlineHelpText>This is the auto-generated Partner Attribute number. Please do not edit this field.</inlineHelpText>
    <label>Partner Attribute</label>
    <referenceTo>Partner_Attribute__c</referenceTo>
    <relationshipName>PBM_Meetings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>